improve dev environment setup documentation